Corrected on iOS

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 .hidden {
 	display: none;
 }
@@ -30,6 +34,10 @@
     position: relative;
 }
 
+[data-href] {
+    cursor: pointer;
+}
+
 p {
-	margin: 1em;
+    margin: 1em;
 }
